@@ -1,3 +1,8 @@
+c3p0-0.9.2-pre3
+	-- Added workaround for bug in Maven 2.2.1 that sometimes leads to corruption
+	   of deployed artifacts. See http://jira.codehaus.org/browse/MNG-4301
+	-- Eliminated bead RELEASE suffix from use in staging to Maven repository,
+	   which should fix managed dependency problems for Maven users.
 	-- Required tests of PooledConnections to own the locks associated with those
 	   PooledConnections in order to prevent occasional deadlocks when PooledConnection.close()
 	   coincides with a Connection test. Many thanks to an anonymous SourceForge user for
